parser.output
State 62 conflicts: 4 shift/reduce
State 76 conflicts: 4 shift/reduce
State 77 conflicts: 4 shift/reduce
State 78 conflicts: 4 shift/reduce
State 79 conflicts: 4 shift/reduce
State 84 conflicts: 1 shift/reduce
State 85 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: Funcs

    2 Funcs: %empty
    3      | FuncDecl Funcs

    4 FuncDecl: RetType ID LPAREN Formals RPAREN LBRACE Statements RBRACE

    5 RetType: Type
    6        | VOID

    7 Formals: %empty
    8        | FormalsList

    9 FormalsList: FormalDecl
   10            | FormalDecl COMMA FormalsList

   11 FormalDecl: Type ID

   12 Statements: Statement
   13           | Statements Statement

   14 Statement: LBRACE Statements RBRACE
   15          | Type ID SC
   16          | Type ID ASSIGN Exp SC
   17          | ID ASSIGN Exp SC
   18          | Call SC
   19          | RETURN SC
   20          | RETURN Exp SC
   21          | IF LPAREN Exp RPAREN Statement
   22          | IF LPAREN Exp RPAREN Statement ELSE Statement
   23          | WHILE LPAREN Exp RPAREN Statement
   24          | WHILE LPAREN Exp RPAREN Statement ELSE Statement
   25          | BREAK SC
   26          | CONTINUE SC

   27 Call: ID LPAREN ExpList RPAREN
   28     | ID LPAREN RPAREN

   29 ExpList: Exp
   30        | Exp COMMA ExpList

   31 Type: INT
   32     | BYTE
   33     | BOOL

   34 Exp: LPAREN Exp RPAREN
   35    | Exp BINOP Exp
   36    | ID
   37    | Call
   38    | NUM
   39    | NUM B
   40    | STRING
   41    | TRUE
   42    | FALSE
   43    | NOT Exp
   44    | Exp AND Exp
   45    | Exp OR Exp
   46    | Exp RELOP Exp


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 4 11 15 16 17 27 28 36
LPAREN (259) 4 21 22 23 24 27 28 34
RPAREN (260) 4 21 22 23 24 27 28 34
LBRACE (261) 4 14
RBRACE (262) 4 14
VOID (263) 6
COMMA (264) 10 30
SC (265) 15 16 17 18 19 20 25 26
ASSIGN (266) 16 17
RETURN (267) 19 20
IF (268) 21 22
ELSE (269) 22 24
WHILE (270) 23 24
BREAK (271) 25
CONTINUE (272) 26
INT (273) 31
BYTE (274) 32
BOOL (275) 33
BINOP (276) 35
NUM (277) 38 39
B (278) 39
STRING (279) 40
TRUE (280) 41
FALSE (281) 42
NOT (282) 43
AND (283) 44
OR (284) 45
RELOP (285) 46


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
Funcs (33)
    on left: 2 3, on right: 1 3
FuncDecl (34)
    on left: 4, on right: 3
RetType (35)
    on left: 5 6, on right: 4
Formals (36)
    on left: 7 8, on right: 4
FormalsList (37)
    on left: 9 10, on right: 8 10
FormalDecl (38)
    on left: 11, on right: 9 10
Statements (39)
    on left: 12 13, on right: 4 13 14
Statement (40)
    on left: 14 15 16 17 18 19 20 21 22 23 24 25 26, on right: 12 13
    21 22 23 24
Call (41)
    on left: 27 28, on right: 18 37
ExpList (42)
    on left: 29 30, on right: 27 30
Type (43)
    on left: 31 32 33, on right: 5 11 15 16
Exp (44)
    on left: 34 35 36 37 38 39 40 41 42 43 44 45 46, on right: 16 17
    20 21 22 23 24 29 30 34 35 43 44 45 46


State 0

    0 $accept: . Program $end

    VOID  shift, and go to state 1
    INT   shift, and go to state 2
    BYTE  shift, and go to state 3
    BOOL  shift, and go to state 4

    $default  reduce using rule 2 (Funcs)

    Program   go to state 5
    Funcs     go to state 6
    FuncDecl  go to state 7
    RetType   go to state 8
    Type      go to state 9


State 1

    6 RetType: VOID .

    $default  reduce using rule 6 (RetType)


State 2

   31 Type: INT .

    $default  reduce using rule 31 (Type)


State 3

   32 Type: BYTE .

    $default  reduce using rule 32 (Type)


State 4

   33 Type: BOOL .

    $default  reduce using rule 33 (Type)


State 5

    0 $accept: Program . $end

    $end  shift, and go to state 10


State 6

    1 Program: Funcs .

    $default  reduce using rule 1 (Program)


State 7

    3 Funcs: FuncDecl . Funcs

    VOID  shift, and go to state 1
    INT   shift, and go to state 2
    BYTE  shift, and go to state 3
    BOOL  shift, and go to state 4

    $default  reduce using rule 2 (Funcs)

    Funcs     go to state 11
    FuncDecl  go to state 7
    RetType   go to state 8
    Type      go to state 9


State 8

    4 FuncDecl: RetType . ID LPAREN Formals RPAREN LBRACE Statements RBRACE

    ID  shift, and go to state 12


State 9

    5 RetType: Type .

    $default  reduce using rule 5 (RetType)


State 10

    0 $accept: Program $end .

    $default  accept


State 11

    3 Funcs: FuncDecl Funcs .

    $default  reduce using rule 3 (Funcs)


State 12

    4 FuncDecl: RetType ID . LPAREN Formals RPAREN LBRACE Statements RBRACE

    LPAREN  shift, and go to state 13


State 13

    4 FuncDecl: RetType ID LPAREN . Formals RPAREN LBRACE Statements RBRACE

    INT   shift, and go to state 2
    BYTE  shift, and go to state 3
    BOOL  shift, and go to state 4

    $default  reduce using rule 7 (Formals)

    Formals      go to state 14
    FormalsList  go to state 15
    FormalDecl   go to state 16
    Type         go to state 17


State 14

    4 FuncDecl: RetType ID LPAREN Formals . RPAREN LBRACE Statements RBRACE

    RPAREN  shift, and go to state 18


State 15

    8 Formals: FormalsList .

    $default  reduce using rule 8 (Formals)


State 16

    9 FormalsList: FormalDecl .
   10            | FormalDecl . COMMA FormalsList

    COMMA  shift, and go to state 19

    $default  reduce using rule 9 (FormalsList)


State 17

   11 FormalDecl: Type . ID

    ID  shift, and go to state 20


State 18

    4 FuncDecl: RetType ID LPAREN Formals RPAREN . LBRACE Statements RBRACE

    LBRACE  shift, and go to state 21


State 19

   10 FormalsList: FormalDecl COMMA . FormalsList

    INT   shift, and go to state 2
    BYTE  shift, and go to state 3
    BOOL  shift, and go to state 4

    FormalsList  go to state 22
    FormalDecl   go to state 16
    Type         go to state 17


State 20

   11 FormalDecl: Type ID .

    $default  reduce using rule 11 (FormalDecl)


State 21

    4 FuncDecl: RetType ID LPAREN Formals RPAREN LBRACE . Statements RBRACE

    ID        shift, and go to state 23
    LBRACE    shift, and go to state 24
    RETURN    shift, and go to state 25
    IF        shift, and go to state 26
    WHILE     shift, and go to state 27
    BREAK     shift, and go to state 28
    CONTINUE  shift, and go to state 29
    INT       shift, and go to state 2
    BYTE      shift, and go to state 3
    BOOL      shift, and go to state 4

    Statements  go to state 30
    Statement   go to state 31
    Call        go to state 32
    Type        go to state 33


State 22

   10 FormalsList: FormalDecl COMMA FormalsList .

    $default  reduce using rule 10 (FormalsList)


State 23

   17 Statement: ID . ASSIGN Exp SC
   27 Call: ID . LPAREN ExpList RPAREN
   28     | ID . LPAREN RPAREN

    LPAREN  shift, and go to state 34
    ASSIGN  shift, and go to state 35


State 24

   14 Statement: LBRACE . Statements RBRACE

    ID        shift, and go to state 23
    LBRACE    shift, and go to state 24
    RETURN    shift, and go to state 25
    IF        shift, and go to state 26
    WHILE     shift, and go to state 27
    BREAK     shift, and go to state 28
    CONTINUE  shift, and go to state 29
    INT       shift, and go to state 2
    BYTE      shift, and go to state 3
    BOOL      shift, and go to state 4

    Statements  go to state 36
    Statement   go to state 31
    Call        go to state 32
    Type        go to state 33


State 25

   19 Statement: RETURN . SC
   20          | RETURN . Exp SC

    ID      shift, and go to state 37
    LPAREN  shift, and go to state 38
    SC      shift, and go to state 39
    NUM     shift, and go to state 40
    STRING  shift, and go to state 41
    TRUE    shift, and go to state 42
    FALSE   shift, and go to state 43
    NOT     shift, and go to state 44

    Call  go to state 45
    Exp   go to state 46


State 26

   21 Statement: IF . LPAREN Exp RPAREN Statement
   22          | IF . LPAREN Exp RPAREN Statement ELSE Statement

    LPAREN  shift, and go to state 47


State 27

   23 Statement: WHILE . LPAREN Exp RPAREN Statement
   24          | WHILE . LPAREN Exp RPAREN Statement ELSE Statement

    LPAREN  shift, and go to state 48


State 28

   25 Statement: BREAK . SC

    SC  shift, and go to state 49


State 29

   26 Statement: CONTINUE . SC

    SC  shift, and go to state 50


State 30

    4 FuncDecl: RetType ID LPAREN Formals RPAREN LBRACE Statements . RBRACE
   13 Statements: Statements . Statement

    ID        shift, and go to state 23
    LBRACE    shift, and go to state 24
    RBRACE    shift, and go to state 51
    RETURN    shift, and go to state 25
    IF        shift, and go to state 26
    WHILE     shift, and go to state 27
    BREAK     shift, and go to state 28
    CONTINUE  shift, and go to state 29
    INT       shift, and go to state 2
    BYTE      shift, and go to state 3
    BOOL      shift, and go to state 4

    Statement  go to state 52
    Call       go to state 32
    Type       go to state 33


State 31

   12 Statements: Statement .

    $default  reduce using rule 12 (Statements)


State 32

   18 Statement: Call . SC

    SC  shift, and go to state 53


State 33

   15 Statement: Type . ID SC
   16          | Type . ID ASSIGN Exp SC

    ID  shift, and go to state 54


State 34

   27 Call: ID LPAREN . ExpList RPAREN
   28     | ID LPAREN . RPAREN

    ID      shift, and go to state 37
    LPAREN  shift, and go to state 38
    RPAREN  shift, and go to state 55
    NUM     shift, and go to state 40
    STRING  shift, and go to state 41
    TRUE    shift, and go to state 42
    FALSE   shift, and go to state 43
    NOT     shift, and go to state 44

    Call     go to state 45
    ExpList  go to state 56
    Exp      go to state 57


State 35

   17 Statement: ID ASSIGN . Exp SC

    ID      shift, and go to state 37
    LPAREN  shift, and go to state 38
    NUM     shift, and go to state 40
    STRING  shift, and go to state 41
    TRUE    shift, and go to state 42
    FALSE   shift, and go to state 43
    NOT     shift, and go to state 44

    Call  go to state 45
    Exp   go to state 58


State 36

   13 Statements: Statements . Statement
   14 Statement: LBRACE Statements . RBRACE

    ID        shift, and go to state 23
    LBRACE    shift, and go to state 24
    RBRACE    shift, and go to state 59
    RETURN    shift, and go to state 25
    IF        shift, and go to state 26
    WHILE     shift, and go to state 27
    BREAK     shift, and go to state 28
    CONTINUE  shift, and go to state 29
    INT       shift, and go to state 2
    BYTE      shift, and go to state 3
    BOOL      shift, and go to state 4

    Statement  go to state 52
    Call       go to state 32
    Type       go to state 33


State 37

   27 Call: ID . LPAREN ExpList RPAREN
   28     | ID . LPAREN RPAREN
   36 Exp: ID .

    LPAREN  shift, and go to state 34

    $default  reduce using rule 36 (Exp)


State 38

   34 Exp: LPAREN . Exp RPAREN

    ID      shift, and go to state 37
    LPAREN  shift, and go to state 38
    NUM     shift, and go to state 40
    STRING  shift, and go to state 41
    TRUE    shift, and go to state 42
    FALSE   shift, and go to state 43
    NOT     shift, and go to state 44

    Call  go to state 45
    Exp   go to state 60


State 39

   19 Statement: RETURN SC .

    $default  reduce using rule 19 (Statement)


State 40

   38 Exp: NUM .
   39    | NUM . B

    B  shift, and go to state 61

    $default  reduce using rule 38 (Exp)


State 41

   40 Exp: STRING .

    $default  reduce using rule 40 (Exp)


State 42

   41 Exp: TRUE .

    $default  reduce using rule 41 (Exp)


State 43

   42 Exp: FALSE .

    $default  reduce using rule 42 (Exp)


State 44

   43 Exp: NOT . Exp

    ID      shift, and go to state 37
    LPAREN  shift, and go to state 38
    NUM     shift, and go to state 40
    STRING  shift, and go to state 41
    TRUE    shift, and go to state 42
    FALSE   shift, and go to state 43
    NOT     shift, and go to state 44

    Call  go to state 45
    Exp   go to state 62


State 45

   37 Exp: Call .

    $default  reduce using rule 37 (Exp)


State 46

   20 Statement: RETURN Exp . SC
   35 Exp: Exp . BINOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp

    SC     shift, and go to state 63
    BINOP  shift, and go to state 64
    AND    shift, and go to state 65
    OR     shift, and go to state 66
    RELOP  shift, and go to state 67


State 47

   21 Statement: IF LPAREN . Exp RPAREN Statement
   22          | IF LPAREN . Exp RPAREN Statement ELSE Statement

    ID      shift, and go to state 37
    LPAREN  shift, and go to state 38
    NUM     shift, and go to state 40
    STRING  shift, and go to state 41
    TRUE    shift, and go to state 42
    FALSE   shift, and go to state 43
    NOT     shift, and go to state 44

    Call  go to state 45
    Exp   go to state 68


State 48

   23 Statement: WHILE LPAREN . Exp RPAREN Statement
   24          | WHILE LPAREN . Exp RPAREN Statement ELSE Statement

    ID      shift, and go to state 37
    LPAREN  shift, and go to state 38
    NUM     shift, and go to state 40
    STRING  shift, and go to state 41
    TRUE    shift, and go to state 42
    FALSE   shift, and go to state 43
    NOT     shift, and go to state 44

    Call  go to state 45
    Exp   go to state 69


State 49

   25 Statement: BREAK SC .

    $default  reduce using rule 25 (Statement)


State 50

   26 Statement: CONTINUE SC .

    $default  reduce using rule 26 (Statement)


State 51

    4 FuncDecl: RetType ID LPAREN Formals RPAREN LBRACE Statements RBRACE .

    $default  reduce using rule 4 (FuncDecl)


State 52

   13 Statements: Statements Statement .

    $default  reduce using rule 13 (Statements)


State 53

   18 Statement: Call SC .

    $default  reduce using rule 18 (Statement)


State 54

   15 Statement: Type ID . SC
   16          | Type ID . ASSIGN Exp SC

    SC      shift, and go to state 70
    ASSIGN  shift, and go to state 71


State 55

   28 Call: ID LPAREN RPAREN .

    $default  reduce using rule 28 (Call)


State 56

   27 Call: ID LPAREN ExpList . RPAREN

    RPAREN  shift, and go to state 72


State 57

   29 ExpList: Exp .
   30        | Exp . COMMA ExpList
   35 Exp: Exp . BINOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp

    COMMA  shift, and go to state 73
    BINOP  shift, and go to state 64
    AND    shift, and go to state 65
    OR     shift, and go to state 66
    RELOP  shift, and go to state 67

    $default  reduce using rule 29 (ExpList)


State 58

   17 Statement: ID ASSIGN Exp . SC
   35 Exp: Exp . BINOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp

    SC     shift, and go to state 74
    BINOP  shift, and go to state 64
    AND    shift, and go to state 65
    OR     shift, and go to state 66
    RELOP  shift, and go to state 67


State 59

   14 Statement: LBRACE Statements RBRACE .

    $default  reduce using rule 14 (Statement)


State 60

   34 Exp: LPAREN Exp . RPAREN
   35    | Exp . BINOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp

    RPAREN  shift, and go to state 75
    BINOP   shift, and go to state 64
    AND     shift, and go to state 65
    OR      shift, and go to state 66
    RELOP   shift, and go to state 67


State 61

   39 Exp: NUM B .

    $default  reduce using rule 39 (Exp)


State 62

   35 Exp: Exp . BINOP Exp
   43    | NOT Exp .
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp

    BINOP  shift, and go to state 64
    AND    shift, and go to state 65
    OR     shift, and go to state 66
    RELOP  shift, and go to state 67

    BINOP     [reduce using rule 43 (Exp)]
    AND       [reduce using rule 43 (Exp)]
    OR        [reduce using rule 43 (Exp)]
    RELOP     [reduce using rule 43 (Exp)]
    $default  reduce using rule 43 (Exp)


State 63

   20 Statement: RETURN Exp SC .

    $default  reduce using rule 20 (Statement)


State 64

   35 Exp: Exp BINOP . Exp

    ID      shift, and go to state 37
    LPAREN  shift, and go to state 38
    NUM     shift, and go to state 40
    STRING  shift, and go to state 41
    TRUE    shift, and go to state 42
    FALSE   shift, and go to state 43
    NOT     shift, and go to state 44

    Call  go to state 45
    Exp   go to state 76


State 65

   44 Exp: Exp AND . Exp

    ID      shift, and go to state 37
    LPAREN  shift, and go to state 38
    NUM     shift, and go to state 40
    STRING  shift, and go to state 41
    TRUE    shift, and go to state 42
    FALSE   shift, and go to state 43
    NOT     shift, and go to state 44

    Call  go to state 45
    Exp   go to state 77


State 66

   45 Exp: Exp OR . Exp

    ID      shift, and go to state 37
    LPAREN  shift, and go to state 38
    NUM     shift, and go to state 40
    STRING  shift, and go to state 41
    TRUE    shift, and go to state 42
    FALSE   shift, and go to state 43
    NOT     shift, and go to state 44

    Call  go to state 45
    Exp   go to state 78


State 67

   46 Exp: Exp RELOP . Exp

    ID      shift, and go to state 37
    LPAREN  shift, and go to state 38
    NUM     shift, and go to state 40
    STRING  shift, and go to state 41
    TRUE    shift, and go to state 42
    FALSE   shift, and go to state 43
    NOT     shift, and go to state 44

    Call  go to state 45
    Exp   go to state 79


State 68

   21 Statement: IF LPAREN Exp . RPAREN Statement
   22          | IF LPAREN Exp . RPAREN Statement ELSE Statement
   35 Exp: Exp . BINOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp

    RPAREN  shift, and go to state 80
    BINOP   shift, and go to state 64
    AND     shift, and go to state 65
    OR      shift, and go to state 66
    RELOP   shift, and go to state 67


State 69

   23 Statement: WHILE LPAREN Exp . RPAREN Statement
   24          | WHILE LPAREN Exp . RPAREN Statement ELSE Statement
   35 Exp: Exp . BINOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp

    RPAREN  shift, and go to state 81
    BINOP   shift, and go to state 64
    AND     shift, and go to state 65
    OR      shift, and go to state 66
    RELOP   shift, and go to state 67


State 70

   15 Statement: Type ID SC .

    $default  reduce using rule 15 (Statement)


State 71

   16 Statement: Type ID ASSIGN . Exp SC

    ID      shift, and go to state 37
    LPAREN  shift, and go to state 38
    NUM     shift, and go to state 40
    STRING  shift, and go to state 41
    TRUE    shift, and go to state 42
    FALSE   shift, and go to state 43
    NOT     shift, and go to state 44

    Call  go to state 45
    Exp   go to state 82


State 72

   27 Call: ID LPAREN ExpList RPAREN .

    $default  reduce using rule 27 (Call)


State 73

   30 ExpList: Exp COMMA . ExpList

    ID      shift, and go to state 37
    LPAREN  shift, and go to state 38
    NUM     shift, and go to state 40
    STRING  shift, and go to state 41
    TRUE    shift, and go to state 42
    FALSE   shift, and go to state 43
    NOT     shift, and go to state 44

    Call     go to state 45
    ExpList  go to state 83
    Exp      go to state 57


State 74

   17 Statement: ID ASSIGN Exp SC .

    $default  reduce using rule 17 (Statement)


State 75

   34 Exp: LPAREN Exp RPAREN .

    $default  reduce using rule 34 (Exp)


State 76

   35 Exp: Exp . BINOP Exp
   35    | Exp BINOP Exp .
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp

    BINOP  shift, and go to state 64
    AND    shift, and go to state 65
    OR     shift, and go to state 66
    RELOP  shift, and go to state 67

    BINOP     [reduce using rule 35 (Exp)]
    AND       [reduce using rule 35 (Exp)]
    OR        [reduce using rule 35 (Exp)]
    RELOP     [reduce using rule 35 (Exp)]
    $default  reduce using rule 35 (Exp)


State 77

   35 Exp: Exp . BINOP Exp
   44    | Exp . AND Exp
   44    | Exp AND Exp .
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp

    BINOP  shift, and go to state 64
    AND    shift, and go to state 65
    OR     shift, and go to state 66
    RELOP  shift, and go to state 67

    BINOP     [reduce using rule 44 (Exp)]
    AND       [reduce using rule 44 (Exp)]
    OR        [reduce using rule 44 (Exp)]
    RELOP     [reduce using rule 44 (Exp)]
    $default  reduce using rule 44 (Exp)


State 78

   35 Exp: Exp . BINOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   45    | Exp OR Exp .
   46    | Exp . RELOP Exp

    BINOP  shift, and go to state 64
    AND    shift, and go to state 65
    OR     shift, and go to state 66
    RELOP  shift, and go to state 67

    BINOP     [reduce using rule 45 (Exp)]
    AND       [reduce using rule 45 (Exp)]
    OR        [reduce using rule 45 (Exp)]
    RELOP     [reduce using rule 45 (Exp)]
    $default  reduce using rule 45 (Exp)


State 79

   35 Exp: Exp . BINOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   46    | Exp RELOP Exp .

    BINOP  shift, and go to state 64
    AND    shift, and go to state 65
    OR     shift, and go to state 66
    RELOP  shift, and go to state 67

    BINOP     [reduce using rule 46 (Exp)]
    AND       [reduce using rule 46 (Exp)]
    OR        [reduce using rule 46 (Exp)]
    RELOP     [reduce using rule 46 (Exp)]
    $default  reduce using rule 46 (Exp)


State 80

   21 Statement: IF LPAREN Exp RPAREN . Statement
   22          | IF LPAREN Exp RPAREN . Statement ELSE Statement

    ID        shift, and go to state 23
    LBRACE    shift, and go to state 24
    RETURN    shift, and go to state 25
    IF        shift, and go to state 26
    WHILE     shift, and go to state 27
    BREAK     shift, and go to state 28
    CONTINUE  shift, and go to state 29
    INT       shift, and go to state 2
    BYTE      shift, and go to state 3
    BOOL      shift, and go to state 4

    Statement  go to state 84
    Call       go to state 32
    Type       go to state 33


State 81

   23 Statement: WHILE LPAREN Exp RPAREN . Statement
   24          | WHILE LPAREN Exp RPAREN . Statement ELSE Statement

    ID        shift, and go to state 23
    LBRACE    shift, and go to state 24
    RETURN    shift, and go to state 25
    IF        shift, and go to state 26
    WHILE     shift, and go to state 27
    BREAK     shift, and go to state 28
    CONTINUE  shift, and go to state 29
    INT       shift, and go to state 2
    BYTE      shift, and go to state 3
    BOOL      shift, and go to state 4

    Statement  go to state 85
    Call       go to state 32
    Type       go to state 33


State 82

   16 Statement: Type ID ASSIGN Exp . SC
   35 Exp: Exp . BINOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp

    SC     shift, and go to state 86
    BINOP  shift, and go to state 64
    AND    shift, and go to state 65
    OR     shift, and go to state 66
    RELOP  shift, and go to state 67


State 83

   30 ExpList: Exp COMMA ExpList .

    $default  reduce using rule 30 (ExpList)


State 84

   21 Statement: IF LPAREN Exp RPAREN Statement .
   22          | IF LPAREN Exp RPAREN Statement . ELSE Statement

    ELSE  shift, and go to state 87

    ELSE      [reduce using rule 21 (Statement)]
    $default  reduce using rule 21 (Statement)


State 85

   23 Statement: WHILE LPAREN Exp RPAREN Statement .
   24          | WHILE LPAREN Exp RPAREN Statement . ELSE Statement

    ELSE  shift, and go to state 88

    ELSE      [reduce using rule 23 (Statement)]
    $default  reduce using rule 23 (Statement)


State 86

   16 Statement: Type ID ASSIGN Exp SC .

    $default  reduce using rule 16 (Statement)


State 87

   22 Statement: IF LPAREN Exp RPAREN Statement ELSE . Statement

    ID        shift, and go to state 23
    LBRACE    shift, and go to state 24
    RETURN    shift, and go to state 25
    IF        shift, and go to state 26
    WHILE     shift, and go to state 27
    BREAK     shift, and go to state 28
    CONTINUE  shift, and go to state 29
    INT       shift, and go to state 2
    BYTE      shift, and go to state 3
    BOOL      shift, and go to state 4

    Statement  go to state 89
    Call       go to state 32
    Type       go to state 33


State 88

   24 Statement: WHILE LPAREN Exp RPAREN Statement ELSE . Statement

    ID        shift, and go to state 23
    LBRACE    shift, and go to state 24
    RETURN    shift, and go to state 25
    IF        shift, and go to state 26
    WHILE     shift, and go to state 27
    BREAK     shift, and go to state 28
    CONTINUE  shift, and go to state 29
    INT       shift, and go to state 2
    BYTE      shift, and go to state 3
    BOOL      shift, and go to state 4

    Statement  go to state 90
    Call       go to state 32
    Type       go to state 33


State 89

   22 Statement: IF LPAREN Exp RPAREN Statement ELSE Statement .

    $default  reduce using rule 22 (Statement)


State 90

   24 Statement: WHILE LPAREN Exp RPAREN Statement ELSE Statement .

    $default  reduce using rule 24 (Statement)
